[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Powerups/MegaHook.gd" type="Script" id=1]
[ext_resource path="res://hook/hook.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="MegaHook" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.640625, 0.00250244, 0.00250244, 1 )
position = Vector2( 4.77306, -0.412826 )
texture = ExtResource( 2 )
flip_h = true

[node name="HookArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookArea"]
shape = SubResource( 1 )
disabled = true

[connection signal="area_entered" from="HookArea" to="." method="_on_MegaHookArea_area_entered"]
